Cache_Redis
Foi implementado o cache no category, client e optional